# make_my_harness

./: .gitignore  LICENSE  README.md  llm_providers.py  main.py  pixi.toml  plan.md  plan_chatgpt.md  plan_chatgpt_deepseek.md  plan_deeepseek.md  plan_deepseek_gemini.md  plan_gemini.md  plan_gemini_meta.md  plan_meta.md  pyproject.toml
.github/workflows/: test.yml
feedback_/: feedback_chatgpt.md  feedback_consolidated.md  feedback_deepseek.md  feedback_gemini.md  feedback_summary.md
harness/: llm.py  loop.py  policy.py  tools.py
logs2/: 20260718_154632_7f49a307.jsonl  20260718_155357_1ae99972.jsonl  20260718_155733_4df436fc.jsonl  20260718_155814_4af065df.jsonl  20260718_160006_c3fe76db.jsonl  20260718_160023_b8b6875d.jsonl  20260718_160112_e973e7d2.jsonl  20260718_160140_7f09c1af.jsonl  20260718_160205_fe907713.jsonl  20260718_160251_f3955424.jsonl  20260718_160358_9bd49bdc.jsonl  20260718_160400_18a0542b.jsonl  20260718_160544_498e3c58.jsonl  20260718_160651_99a8c5d4.jsonl  20260718_162106_0db88650.jsonl  20260718_164554_3ce0379d.jsonl  20260718_164909_90077456.jsonl  20260718_164910_a9b82c59.jsonl  20260718_173854_f55f918c.jsonl
make_harness/: __main__.py  cli.py  commands.py  context.py  llm.py  llm_providers.py  log.py  loop.py  mentions.py  policy.py  prompt.py  ui.py
tests/: test_commands.py  test_context.py  test_llm.py  test_llm_salvage.py  test_loop.py  test_memory.py  test_mentions.py  test_policy.py  test_prompt.py  test_repl_pipe.py  test_skills.py  test_tools.py  test_truncate.py  test_tui_app.py  test_tui_blocks.py  test_tui_render.py  test_ui.py
(+15 files in other folders)
